# variant_dataset

./: .gitignore  pyproject.toml
igvf_catalog/: create_dataset.py  data_utils.py  read_mutpred2_results.py  read_reference_databases.py
variant_dataset/: create_dataset.py  data_utils.py  read_mutpred2_results.py  read_reference_databases.py
